Rename app to Aesthetic Bible

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bible</title>
+    <title>Aesthetic Bible</title>
     <link rel="icon" href="icon.ico" />
     <link rel="icon" type="image/png" sizes="512x512" href="icon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="icon-180.png" />
@@ -14,7 +14,7 @@
     <div class="app-shell">
       <div class="window-bar">
         <div class="window-title-wrap">
-          <div class="window-title">Bible</div>
+          <div class="window-title">Aesthetic Bible</div>
           <button class="auth-btn" id="authToggle" type="button" aria-label="Sign in" title="Sign in">
             <span class="auth-icon" aria-hidden="true">☁︎</span>
           </button>
